--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>John Gadiano</h1>
-        <p>Web Developer & Designer</p>
+        <h1>Irish Jean Gillona</h1>
+        <p>QA & TESTER</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>Lovable</p>
+        <p>AlIEN</p>
     </section>
 
     <section id="portfolio" class="portfolio">
-        <h2>Portfolio</h2>
+        <h2>portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
             <h3>Portfolio101</h3>
@@ -38,15 +38,15 @@
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project</h3>
-            <p>intro1</p>
+            <h3>Syntax</h3>
+            <p>Error</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. Email: khalilangeloacosta.com Github: https://github.com/s0wee</p>
+        <p>Feel free to get in touch. irishjeangillona@gmail.com</p>
     </section>
 
     <footer>
@@ -56,7 +56,7 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <p>&copy; 2023 Khalil Angelo T. Acosta. All rights reserved.</p>
+        <p>&copy; 2023 Irish jean Gillona.</p>
     </footer>
 </body>
 </html>
