--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <h2>portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Portfolio101</h3>
-            <p>intro</p>
+            <h3>Autobots101</h3>
+            <p>Cybertron</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
