--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>Jeha Batoon</h1>
+        <h1>Carlalmojuela</h1>
         <p>Web Developer & Designer</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
 
     <section id="about" class="about">
-        <h2>About Me</h2>
+        <h2>human blood type: a</h2>
         <p>Your bio goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
     </section>
 
