--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>Carlalmojuela</h1>
+        <h1>Kevin Cesar Jacobo</h1>
         <p>Web Developer & Designer</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
@@ -56,7 +56,7 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2023 Kevin Cesar. All rights reserved.</p>
     </footer>
 </body>
 </html>
