--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>Kevin Cesar Jacobo</h1>
+        <h1>Khalil Angelo T. Acosta</h1>
         <p>Web Developer & Designer</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
 
     <section id="about" class="about">
-        <h2>human blood type: a</h2>
+        <h2>human blood type: </h2>
         <p>Your bio goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
     </section>
 
@@ -46,7 +46,7 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. Email: your@email.com</p>
+        <p>Feel free to get in touch. Email: khalilangeloacosta.com</p>
     </section>
 
     <footer>
@@ -56,7 +56,7 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <p>&copy; 2023 Kevin Cesar. All rights reserved.</p>
+        <p>&copy; 2023 Khalil Angelo T. Acosta. All rights reserved.</p>
     </footer>
 </body>
 </html>
