--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
     </section>
 
     <section id="about" class="about">
-        <h2>human blood type: </h2>
-        <p>Your bio goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <h2>About Me</h2>
+        <p>Careboy</p>
     </section>
 
     <section id="portfolio" class="portfolio">
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
+            <h3>Tools</h3>
+            <p>Hax</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project 2</h3>
-            <p>Description of Project 2...</p>
+            <h3>Autopots</h3>
+            <p>Macro</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. Email: khalilangeloacosta.com</p>
+        <p>Feel free to get in touch. Email: khalilangeloacosta.com Github: https://github.com/s0wee</p>
     </section>
 
     <footer>
