--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Tools</h3>
-            <p>Hax</p>
+            <h3>Portfolio101</h3>
+            <p>intro</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Autopots</h3>
-            <p>Macro</p>
+            <h3>Project</h3>
+            <p>intro1</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
