--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. Email: khalilangeloacosta.com Github: https://github.com/s0wee</p>
+        <p>Feel free to get in touch. Email: kraztmix95@gmail.com Github: https://github.com/KrazyPotatooo</p>
     </section>
 
     <footer>
