--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <p>&copy; 2023 Khalil Angelo T. Acosta. All rights reserved.</p>
+        <p>&copy; 2023 John Gadiano. All rights reserved.</p>
     </footer>
 </body>
 </html>
