--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>Irish Jean Gillona</h1>
+        <h1>John Gadiano</h1>
         <p>QA & TESTER</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
