--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>John Gadiano</h1>
+        <h1>Khalil Angelo T. Acosta</h1>
         <p>QA & TESTER</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
