--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. irishjeangillona@gmail.com</p>
+        <p>Feel free to get in touch. khalilangeloacosta@gmail.com Github: https://github.com/s0wee</p>
     </section>
 
     <footer>
@@ -56,7 +56,7 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <p>&copy; 2023 Irish jean Gillona.</p>
+        <p>&copy; 2023 Khalil Angelo T. Acosta.</p>
     </footer>
 </body>
 </html>
