--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>ALIEN</p>
+        <p>Careboy</p>
     </section>
 
     <section id="portfolio" class="portfolio">
